[package]
name = "iron_dome"
version = "0.1.0"
edition = "2018"
debug=1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
captrs = "0.3.1"
bmp = "0.5"
image = "*"
imageproc = {version = "*", features=["display-window"] }
rand = "0.8.4"
